--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">GMMA</string>
-    <string name="app_version">버전 1.04</string>
+    <string name="app_name">GMMAHS</string>
+    <string name="app_version">버전 1.05</string>
 </resources>
